--- a/hobbies.html
+++ b/hobbies.html
@@ -12,6 +12,6 @@
       <li>Football</li>
     </ol>
 
-    <a download href="documents/cover letter.pdf" target="_self">Download file</a>
+    <a download href="image/1.jpg" target="_self">Download file</a>
   </body>
 </html>
